--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-:root {
-    --cinza-secundario: #667085;
-    --vermelho-vinho: #8E2424;
-    --preto-titulo: #101828;
-    --fonte: 'Inter';
-}
-
 .principal__container{
     text-align: center;
 }
@@ -20,17 +13,22 @@
     margin: 1.87rem 0;
 }
 
+.segundo{
+    font-size: 2.25rem;
+}
+
 .principal__texto{
     font-size: 20px;
     font-weight: 400;
     color: var(--cinza-secundario);
-    margin: 0 11rem 6rem 11rem;
+    margin: 0 11rem 2rem 11rem;
 }
 
 .principal__lista{
     display: flex;
     gap: 32px;
     justify-content: flex-start;
+    margin-top: 4rem;
 }
 
 .principal__dado{
@@ -50,4 +48,126 @@
     font-size: 16px;
     font-weight: 400;
     color: var(--cinza-secundario);    
+}
+
+.principal__numeros{
+    margin-bottom: 8rem;
+}
+
+.vagas__container{
+    text-align: center;
+}
+
+.vagas__fundo{
+    background-color: #8e242426;
+    padding: 0.3rem;
+    border-radius: 1rem;
+}
+
+.vaga__painel{
+    margin: 4rem 14rem 6rem 14rem;
+}
+
+.vaga__titulo{
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: var(--preto-titulo);
+}
+
+.vaga__aberta{
+    margin-top: 2rem;
+    border: 1px solid #EAECF0;
+    padding: 1.5rem;
+    border-radius: 16px;
+}
+
+.vaga__subtitulo{
+    font-size: 1.12rem;
+    font-weight: 500;
+    color: var(--preto-titulo);
+}
+
+.vaga__informacoes{
+    margin-top: 2rem;
+}
+
+.vaga__sobre{
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--cinza-secundario);
+    margin-right: 1.5rem;
+}
+
+.secundaria{
+    margin-bottom: 4rem;
+}
+
+.depoimentos{
+    background-color: #8e24240f;
+    text-align: center;
+    padding: 4rem;
+    margin-bottom: 10rem;
+    border-radius: 16px;
+}
+
+.depoimentos__titulo{
+    color: var(--preto-titulo);
+    font-size: 2rem;
+    font-weight: 500;
+    margin: 1rem 0 2rem 0;
+}
+
+.depoimentos__imagem{
+    display: block;
+    margin: 0 auto;
+}
+
+.depoimentos__nome{
+    display: block;
+    margin: 1rem 0 0.2rem 0;
+    color: var(--preto-titulo);
+}
+
+.depoimentos__funcao{
+    font-size: 0.87rem;
+    color: var(--cinza-secundario);
+}
+
+footer{
+    text-align: center;
+    margin-bottom: 6rem;
+}
+
+.rodape__subtitulo{
+    font-size: 1.25rem;
+    font-weight: 400;
+    color: var(--cinza-secundario);
+    margin: 1.25rem 0 2.5rem 0;
+}
+
+.rodape__email{
+    border: 1px solid #D0D5DD;
+    border-radius: 8px;
+    padding: 0.75rem 1rem;
+    width: 25%;
+}
+
+.rodape__botao{
+    padding: 0.75rem 1.25rem;
+    background-color: var(--vermelho-vinho);
+    border: 1px solid #8E2424;
+    color: #FFF;
+    border-radius: 8px;
+    margin-bottom: 2rem;
+}
+
+.rodape__botao:hover{
+    color: var(--vermelho-vinho);
+    background-color: #FFF;
+    cursor: pointer;
+}
+
+.rodape__copy{
+    font-size: 0.87rem;
+    color: var(--cinza-secundario);
 }
